--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@ai-sdk/openai": "^3.0.12",
     "@cloudbase/node-sdk": "^3.16.0",
     "@hookform/resolvers": "^3.10.0",
+    "@prisma/adapter-mariadb": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -52,6 +54,7 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mariadb": "^3.4.5",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19",
