--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@vercel/analytics": "1.3.1",
     "ai": "latest",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -53,6 +54,7 @@
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.454.0",
     "mariadb": "^3.4.5",
     "next": "15.2.4",
@@ -71,6 +73,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
