--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "postinstall": "node -e \"if(process.env.DATABASE_URL){require('child_process').execSync('prisma generate',{stdio:'inherit'})}else{console.log('postinstall: DATABASE_URL not set; skip prisma generate')}\"",
+    "postinstall": "prisma generate",
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
@@ -59,7 +59,7 @@
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.454.0",
     "mariadb": "^3.4.5",
-    "next": "15.2.4",
+    "next": "15.2.8",
     "next-themes": "^0.4.6",
     "react": "^19",
     "react-day-picker": "9.8.0",
@@ -81,7 +81,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^15.2.4",
+    "eslint-config-next": "^15.2.8",
     "postcss": "^8.5",
     "prisma": "7.2.0",
     "tailwindcss": "^4.1.9",
